--- a/index.html
+++ b/index.html
@@ -4,9 +4,59 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style/index.css">
+  
+  <title>Kata - Bootstrap</title>
 </head>
 <body>
-  
+  <header>
+    <nav class="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./sources/k.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        </a>
+      </div>
+    </nav>
+  </header>
+  <article>
+    <form id="login-form">
+      <h1>Entrar</h1>
+      <span>
+        <label for="email">E-mail</label><br />
+        <input 
+          type="email" 
+          id="email"
+          class="input"
+          name="email"
+          onkeydown="validateEmail()"><br />
+          <span 
+            id="alert-email"
+            class="alert">*E-mail inválido</span>
+      </span>
+      <span>
+        <label for="password">Senha</label><br />
+        <input 
+          type="password" 
+          id="password"
+          class="input"
+          onkeyup="validatePassword()"
+          name="password"><br />
+        <span
+          id="alert-password"
+          class="alert">*A senha tem que ter no mínimo 8 caracteres</span>
+      </span>
+      <input 
+        type="button" 
+        value="Entrar"
+        onclick="handleLoginButton()"
+        id="login-button">
+    </form>
+  </article>
+  <footer>
+    <p>&copy; 2022 Copyright: IACarvalho</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <script src="./script/index.js"></script>
 </body>
 </html>
